[gd_scene load_steps=25 format=3 uid="uid://dg7a57e23c7m1"]

[ext_resource type="Script" path="res://Slime.gd" id="1_w48ui"]
[ext_resource type="Texture2D" uid="uid://dlfav6p8v7jum" path="res://Assets/Enemy2/slime-Sheet.png" id="2_u4e5b"]
[ext_resource type="Texture2D" uid="uid://b8tntjsthkm68" path="res://Assets/UI/enemy_back.png" id="3_71dsi"]
[ext_resource type="Texture2D" uid="uid://bgsrgxcvloxey" path="res://Assets/UI/enemy_full.png" id="4_nxhky"]
[ext_resource type="Script" path="res://Scenes/EnemyHP.gd" id="5_d6iht"]
[ext_resource type="AudioStream" uid="uid://bwhmwlbvbqp47" path="res://Assets/SFX/61_Hit_03.wav" id="6_nha6v"]
[ext_resource type="AudioStream" uid="uid://cfioqvk7swm8s" path="res://Assets/SFX/slime.1.ogg" id="7_5omho"]
[ext_resource type="AudioStream" uid="uid://cao23ilmt73yu" path="res://Assets/SFX/slime.2.ogg" id="8_y0kkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tpd4g"]
atlas = ExtResource("2_u4e5b")
region = Rect2(0, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15so"]
atlas = ExtResource("2_u4e5b")
region = Rect2(32, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne68x"]
atlas = ExtResource("2_u4e5b")
region = Rect2(64, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_r80pr"]
atlas = ExtResource("2_u4e5b")
region = Rect2(96, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hk1s"]
atlas = ExtResource("2_u4e5b")
region = Rect2(128, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_i446g"]
atlas = ExtResource("2_u4e5b")
region = Rect2(0, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_aocgk"]
atlas = ExtResource("2_u4e5b")
region = Rect2(32, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_edg2w"]
atlas = ExtResource("2_u4e5b")
region = Rect2(64, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y8gd"]
atlas = ExtResource("2_u4e5b")
region = Rect2(96, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwbl6"]
atlas = ExtResource("2_u4e5b")
region = Rect2(128, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wlcg"]
atlas = ExtResource("2_u4e5b")
region = Rect2(160, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vl3b"]
atlas = ExtResource("2_u4e5b")
region = Rect2(192, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetxv"]
atlas = ExtResource("2_u4e5b")
region = Rect2(224, 0, 32, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_chyxx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpd4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne68x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r80pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hk1s")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i446g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aocgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edg2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y8gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwbl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wlcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vl3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetxv")
}],
"loop": true,
"name": &"go",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h14yh"]
size = Vector2(13, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_2142r"]
radius = 15.0333

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_w48ui")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_chyxx")
animation = &"go"
frame = 7
frame_progress = 0.686993

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.73536e-08, 4.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_h14yh")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_2142r")

[node name="Timer" type="Timer" parent="."]

[node name="EnemyHP" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -23.0
offset_right = 17.0
offset_bottom = 14.0
texture_under = ExtResource("3_71dsi")
texture_progress = ExtResource("4_nxhky")
script = ExtResource("5_d6iht")

[node name="Audio" type="Node2D" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_nha6v")

[node name="Slime1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_5omho")
volume_db = -20.0

[node name="Slime2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_y0kkn")
volume_db = -20.0

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
